Training loop added

--- a/RiceTypeClassification.ipynb
+++ b/RiceTypeClassification.ipynb
@@ -576,13 +576,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Loss function and optimizier\n",
     "criterion = nn.BCELoss()\n",
-    "optimizer = Adam(model.parameters(), lr = 1e-3)"
+    "optimizer = Adam(model.parameters(), lr = 1e-3)\n"
    ]
   },
   {
@@ -591,8 +591,55 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "#training loop\n",
-    " "
+    "total_loss_train_plot = []\n",
+    "total_loss_validation_plot = []\n",
+    "total_acc_train_plot = []\n",
+    "total_acc_validation_plot = []\n",
+    "\n",
+    "epochs = 10\n",
+    "for epoch in range(epochs):\n",
+    "    total_acc_train = 0\n",
+    "    total_loss_train = 0\n",
+    "    total_acc_val = 0\n",
+    "    total_loss_val = 0\n",
+    "\n",
+    "for data in train_dataloader:\n",
+    "    inputs, labels = data\n",
+    "\n",
+    "    prediction = model(inputs).squeeze(1)\n",
+    "    \n",
+    "    batch_loss = criterion(prediction, labels)\n",
+    "    \n",
+    "    total_loss_train += batch_loss.item()\n",
+    "\n",
+    "    acc = ((prediction).round()==labels).sum().item()\n",
+    "    \n",
+    "    total_acc_train += acc\n",
+    "\n",
+    "    batch_loss.backward()\n",
+    "    optimizer.step()\n",
+    "    optimizer.zero_grad()\n",
+    "\n",
+    "with torch.no_grad():\n",
+    "    for data in validatiion_dataloader:\n",
+    "        inputs, labels = data\n",
+    "\n",
+    "        prediction = model(inputs).squeeze(1)\n",
+    "        batch_loss = criterion(prediction, labels)\n",
+    "        \n",
+    "        total_loss_val += batch_loss.item()\n",
+    "        acc = ((prediction).round()==labels.sum().item())\n",
+    "\n",
+    "        total_acc_val += acc\n",
+    "\n",
+    "total_loss_train_plot.append(round(total_acc_train/1000,4))\n",
+    "total_loss_validation_plot.append(round(total_acc_val/1000,4))\n",
+    "\n",
+    "total_acc_train_plot.append(round(total_acc_train/training_data.__len__() * 100,4))\n",
+    "total_loss_train_plot.append(round(total_acc_train/1000,4))\n",
+    "\n"
    ]
   }
  ],
