--- a/DrivingBehaviourClassfication/DrivingBehaviousClassfication.ipynb
+++ b/DrivingBehaviourClassfication/DrivingBehaviousClassfication.ipynb
@@ -2,69 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#impoering the libraries and moduels\n",
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "from torch.utils.data import Dataset ,DataLoader\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from torchsummary import summary\n",
-    "from sklearn.metrics import accuracy_score\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from torch.optim import Adam\n",
-    "\n",
-    "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#importing and cleaning the dataset\n",
-    "test_data_df = pd.read_csv(r\"D:\\Datasets\\Kaggle\\Driving _behaviour_dataset\\test_motion_data.csv\")\n",
-    "train_data_df = pd.read_csv(r\"D:\\Datasets\\Kaggle\\Driving _behaviour_dataset\\train_motion_data.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "original_test_data_df = test_data_df.copy()\n",
-    "original_train_data_df = train_data_df.copy()\n",
-    "test_data_df.dropna(inplace=True)\n",
-    "train_data_df.dropna(inplace=True)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#normalizing \n",
-    "for column in train_data_df:\n",
-    "    if train_data_df[column].dtype in  ['int','float']:\n",
-    "        train_data_df[column] = train_data_df[column]/train_data_df[column].abs().max()\n",
-    "\n",
-    "for column in test_data_df:\n",
-    "    if test_data_df[column].dtype in ['int','float']:\n",
-    "        test_data_df[column] = test_data_df[column]/test_data_df[column].abs().max()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -76,26 +14,7 @@
       "1 -0.325915 -0.230327 -0.028581 -0.033627  0.030545  0.109615  NORMAL\n",
       "2 -0.119277 -0.026046  0.030865 -0.022838 -0.017455  0.071080  NORMAL\n",
       "3  0.148124 -0.048610  0.093468  0.082179 -0.017818  0.044402  NORMAL\n",
-      "4  0.020407  0.165447 -0.009341  0.036145 -0.002182  0.044402  NORMAL\n"
-     ]
-    }
-   ],
-   "source": [
-    "#omitting out the timestamp column cuz its irrelevant\n",
-    "test_data_df.drop(['Timestamp'], axis=1, inplace=True)\n",
-    "train_data_df.drop(['Timestamp'], axis=1, inplace=True)\n",
-    "print(train_data_df.head())\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "4  0.020407  0.165447 -0.009341  0.036145 -0.002182  0.044402  NORMAL\n",
       "0       1\n",
       "1       1\n",
       "2       1\n",
@@ -114,14 +33,52 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\HP\\AppData\\Local\\Temp\\ipykernel_11200\\311424802.py:7: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "C:\\Users\\HP\\AppData\\Local\\Temp\\ipykernel_39296\\3544475429.py:45: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  train_data_df['Class'] = train_data_df['Class'].replace(class_mapping)\n",
-      "C:\\Users\\HP\\AppData\\Local\\Temp\\ipykernel_11200\\311424802.py:8: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "C:\\Users\\HP\\AppData\\Local\\Temp\\ipykernel_39296\\3544475429.py:46: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  test_data_df['Class'] = test_data_df['Class'].replace(class_mapping)\n"
      ]
     }
    ],
    "source": [
+    "#impoering the libraries and moduels\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "from torch.utils.data import Dataset ,DataLoader\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from torchsummary import summary\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from torch.optim import Adam\n",
+    "\n",
+    "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
+    "\n",
+    "\n",
+    "#importing and cleaning the dataset\n",
+    "test_data_df = pd.read_csv(r\"D:\\Datasets\\Kaggle\\Driving _behaviour_dataset\\test_motion_data.csv\")\n",
+    "train_data_df = pd.read_csv(r\"D:\\Datasets\\Kaggle\\Driving _behaviour_dataset\\train_motion_data.csv\")\n",
+    "original_test_data_df = test_data_df.copy()\n",
+    "original_train_data_df = train_data_df.copy()\n",
+    "test_data_df.dropna(inplace=True)\n",
+    "train_data_df.dropna(inplace=True)\n",
+    "\n",
+    "\n",
+    "#normalizing \n",
+    "for column in train_data_df:\n",
+    "    if train_data_df[column].dtype in  ['int','float']:\n",
+    "        train_data_df[column] = train_data_df[column]/train_data_df[column].abs().max()\n",
+    "\n",
+    "for column in test_data_df:\n",
+    "    if test_data_df[column].dtype in ['int','float']:\n",
+    "        test_data_df[column] = test_data_df[column]/test_data_df[column].abs().max()\n",
+    "\n",
+    "#omitting out the timestamp column cuz its irrelevant\n",
+    "test_data_df.drop(['Timestamp'], axis=1, inplace=True)\n",
+    "train_data_df.drop(['Timestamp'], axis=1, inplace=True)\n",
+    "print(train_data_df.head())\n",
+    "\n",
     "#replacing the class column with integeres witht he help of mapping\n",
     "class_mapping = {\n",
     "    'SLOW' : 0,\n",
@@ -159,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,8 +133,8 @@
     "\n",
     "class dataset(Dataset):\n",
     "    def __init__(self, X, Y):\n",
-    "        self.X = torch.tensor(X, dtype=torch.float32, requires_grad=True).to(device)\n",
-    "        self.Y = torch.tensor(Y, dtype=torch.float32).to(device)\n",
+    "        self.X = torch.tensor(X, dtype=torch.float32)\n",
+    "        self.Y = torch.tensor(Y, dtype=torch.long)\n",
     "        \n",
     "    def __len__(self):\n",
     "        return len(self.X)\n",
@@ -189,21 +146,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "training_data = dataset(X_train, Y_train)\n",
     "validation_data = dataset(X_val, Y_val)\n",
-    "test_data = dataset(X_test, Y_test)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "test_data = dataset(X_test, Y_test)\n",
+    "\n",
     "#Loading the dataset into dataloader\n",
     "train_dataloader = DataLoader(training_data, batch_size=8, shuffle=True)\n",
     "validation_dataloader = DataLoader(validation_data, batch_size=8, shuffle=True)\n",
@@ -212,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,65 +178,70 @@
     "        x = self.input_layer(x)\n",
     "        x = self.relu(x)\n",
     "        output = self.output_layer(x)\n",
+    "        return x\n",
     "    \n",
     "model = DriveModel().to(device)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "loss_fn = nn.BCELoss()\n",
-    "optimizer = Adam(model.parameters(), lr = 2)"
+    "loss_fn = nn.CrossEntropyLoss()\n",
+    "optimizer = Adam(model.parameters(), lr = 1e-3)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'int' object is not iterable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[25]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43msummary\u001b[49m\u001b[43m(\u001b[49m\u001b[43mDriveModel\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m(\u001b[49m\u001b[43mX\u001b[49m\u001b[43m.\u001b[49m\u001b[43mshape\u001b[49m\u001b[43m[\u001b[49m\u001b[32;43m1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Coding\\Python learnen materials\\Projects\\ProjecrtEnv\\Lib\\site-packages\\torchsummary\\torchsummary.py:60\u001b[39m, in \u001b[36msummary\u001b[39m\u001b[34m(model, input_size, batch_size, device)\u001b[39m\n\u001b[32m     57\u001b[39m     input_size = [input_size]\n\u001b[32m     59\u001b[39m \u001b[38;5;66;03m# batch_size of 2 for batchnorm\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m60\u001b[39m x = \u001b[43m[\u001b[49m\u001b[43mtorch\u001b[49m\u001b[43m.\u001b[49m\u001b[43mrand\u001b[49m\u001b[43m(\u001b[49m\u001b[32;43m2\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43min_size\u001b[49m\u001b[43m)\u001b[49m\u001b[43m.\u001b[49m\u001b[43mtype\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdtype\u001b[49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43min_size\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43minput_size\u001b[49m\u001b[43m]\u001b[49m\n\u001b[32m     61\u001b[39m \u001b[38;5;66;03m# print(type(x[0]))\u001b[39;00m\n\u001b[32m     62\u001b[39m \n\u001b[32m     63\u001b[39m \u001b[38;5;66;03m# create properties\u001b[39;00m\n\u001b[32m     64\u001b[39m summary = OrderedDict()\n",
-      "\u001b[31mTypeError\u001b[39m: 'int' object is not iterable"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Training loop\n",
-    "total_loss_train_plt = []\n",
-    "total_loss_val_plt = []\n",
-    "total_acc_train_plt = []\n",
-    "total_acc_val_plt = []\n",
+    "epochs = 10\n",
+    "\n",
+    "for epoch in range(epochs):\n",
+    "    model.train()\n",
+    "    running_loss = 0\n",
+    "    for inputs, labels in train_dataloader:\n",
+    "        inputs, labels = inputs.to(device),labels.to(device)\n",
+    "        optimizer.zero_grad()\n",
+    "        output = model(inputs)\n",
+    "        batch_loss = loss_fn(output, labels)\n",
+    "        batch_loss.backward()\n",
+    "        optimizer.step()\n",
+    "\n",
+    "        running_loss += batch_loss.item()\n",
+    "        avg_train_loss = running_loss/len(train_dataloader)\n",
     "\n",
     "\n",
-    "#epochs = 10\n",
-    "#for epoch in epochs:\n",
-    "    total_loss_train = 0\n",
-    "    total_acc_train = 0\n",
-    "    total_loss_val = 0\n",
-    "    total_acc_val = 0\n",
+    "    #Validation loop\n",
+    "    model.eval()\n",
+    "    val_running_loss = 0\n",
+    "    val_running_loss = 0\n",
+    "    with torch.no_grad():\n",
+    "        for val_input, val_labels in validation_dataloader:\n",
+    "            val_input = val_input.to(device)\n",
+    "            val_labels = val_labels.to(device)\n",
     "\n",
-    "    input, labels = data\n",
-    "    prediction = DriveModel(input)\n",
+    "            val_output = DriveModel(val_input)\n",
+    "            val_batch_loss = loss_fn(val_output, val_labels)\n",
     "\n",
-    "    batch_loss = loss_fn(input, labels)\n",
-    "    total_loss_train += batch_loss\n",
+    "            val_running_loss += val_batch_loss.item()\n",
+    "    avg_val_loss = val_running_loss/len(validation_dataloader)\n",
     "\n",
-    "    acc = ((prediction).round()==labels).sum().item()\n",
-    "    total_acc_train += acc\n",
     "\n",
-    "    loss_fn.backward()\n",
-    "    optimizer.step()\n",
-    "    optimizer.zero_grad()\n",
+    "    print('**' * 12)\n",
+    "\n",
+    "    print(f\"Epoch: [{epoch+1}/{epochs}]\")\n",
+    "    print(f\"Training loss(avg): {avg_train_loss}\")\n",
+    "    print(f\"Validation loss(avg): {avg_val_loss}\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "    \n"
    ]
   },
