wrote the Datset class

--- a/AnimalFaces/AnimalFacesImageClassifier.ipynb
+++ b/AnimalFaces/AnimalFacesImageClassifier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -39,19 +39,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "train\n",
-      "cat\n",
-      "flickr_cat_000002.jpg\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "image_path = []\n",
     "labels = []\n",
@@ -61,7 +51,77 @@
     "            image_path.append(rf\"D:\\Datasets\\Kaggle\\afhq\\{i}\\{label}\\{image}\")\n",
     "            labels.append(label)\n",
     "\n",
-    " "
+    "\n",
+    "data_df = pd.DataFrame(zip(image_path, labels), columns = [\"image_path\", \"labels\"])\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(11291, 2)\n",
+      "(2420, 2)\n",
+      "(2419, 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "train = data_df.sample(frac = 0.7)\n",
+    "test = data_df.drop(train.index)\n",
+    "val = test.sample(frac=0.5)\n",
+    "test = test.drop(val.index)\n",
+    "\n",
+    "print(train.shape)\n",
+    "print(val.shape)\n",
+    "print(test.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "label_encoder = LabelEncoder()\n",
+    "label_encoder.fit(data_df[\"labels\"])\n",
+    "transform = transforms.Compose([\n",
+    "    transforms.Resize((128,128)),\n",
+    "    transforms.ToTensor(),\n",
+    "    transforms.ConvertImageDtype(torch.float)\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class CustomImageDataset(Dataset):\n",
+    "    def __init__(self, dataframe, transform = None):\n",
+    "        self.dataframe = dataframe\n",
+    "        self.transform = transform\n",
+    "        self.labels = torch.tensor(label_encoder.transform(dataframe['labels'])).to(device)\n",
+    "    \n",
+    "    def __len__(self):\n",
+    "        return self.dataframe.shape[0]\n",
+    "    \n",
+    "    def __getitem__(self, idx):\n",
+    "        image_path = self.dataframe.iloc[idx, 0]\n",
+    "        label = self.labels[idx]\n",
+    "\n",
+    "        image = Image.open[image_path].convert('RGB')\n",
+    "\n",
+    "        if self.transform:\n",
+    "            image = self.transform(image).to(device)\n",
+    "\n",
+    "        return image, label\n"
    ]
   },
   {
